syntax = "proto3";
package ch_ewf.change_registered_office;

import "base_types.proto";
import "form_submission.proto";

message ChangeRegisteredOffice {
  form_submission.FormSubmission form_submission = 1;
  base_types.UKAddress address = 2;
}
